# franzensfestegibsnet

./: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.dev-db.yml  docker-compose.yml  init.sql  ngnix.conf  schema.sql
.github/workflows/: publish-image.yml
articles/: A travellers guide to the train station.md  The Franzensfeste Anomaly.md  The Franzensfeste Conspiracy.md  The Franzensfeste Military Base Conspiracy.md
migrations/: 20260506000000_admin_accounts.sql  20260514000000_rate_limiting_security.sql  20260515000000_upload_tags.sql  add_fingerprint_details.sql
public/: robots.txt  sitemap.xml
public/css/: admin_post_edit.css  admin_style.css  article_style.css  forum.css  forum_create_style.css  index_style.css  index_styles.css  style.css  wiki_style.css
public/js/: admin_archive.js  createpost.js  fingerprinting.js  uploads.js
public/static/: Untitled Diagram(1).drawio
src/: helpers.rs  main.rs  markdown.rs
src/models/: article.rs  auth.rs  forum.rs  mod.rs  security.rs  upload.rs
src/routes/: admin.rs  auth.rs  forum.rs  index.rs  mod.rs  uploads.rs  wiki.rs
templates/: admin_archive.html.hbs  admin_article_edit.html.hbs  admin_articles.html.hbs  admin_edit_post.html.hbs  admin_login.html.hbs  admin_moderation.html.hbs  admin_moderation_comments.html.hbs  admin_moderation_posts.html.hbs  admin_panel.html.hbs  admin_users.html.hbs  forum.html.hbs  forum_create.html.hbs  forum_post.html.hbs  index.html.hbs  layout.html.hbs  login.html.hbs  profile.html.hbs  register.html.hbs  wiki.html.hbs  wiki_article.html.hbs
www/: createpost.ts  fingerprinting.ts  tsconfig.json  uploads.ts
