[package]
name = "franzensfestegibsnet"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["handlebars"] }
rocket_sync_db_pools = { version = "0.1.0-rc.2", features = ["diesel_postgres_pool"] }
serde = { version = "1.0", features = ["derive"] }
handlebars = "4.3.1"
pulldown-cmark = "0.12.2"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
